Attempting to fix watch on mobile

--- a/styles/revengeMobile.css
+++ b/styles/revengeMobile.css
@@ -95,7 +95,7 @@ body {
     }
 
     main ul {
-        /*list-style-type: none;*/
+        list-style-type: circle;
         text-align: left;
         padding: 0;
         width: auto;
